# experimental

./: Spectra_test_320hz.txt  Spectra_test_320hz_dynamic.txt  Spectra_test_320hz_dynamic2.txt  pyproject.toml
experimental/: showspec.py
