[tool.poetry]
name = "experimental"
version = "0.1.0"
description = ""
authors = ["Ismail Bello <ismail.bello.513@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.3"
scipy = "^1.9.1"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
click = "^8.1.3"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
showspec = "experimental.showspec:main"
